cabal-version: 1.12

name:           password
version:        0.1.0.0
description:    A library providing types for working with passwords.
homepage:       https://github.com/cdepillabout/password#readme
bug-reports:    https://github.com/cdepillabout/password/issues
author:         Dennis Gosnell
maintainer:     cdep.illabout@gmail.com
copyright:      Copyright (c) 2019 Dennis Gosnell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cdepillabout/password

library
  exposed-modules:
      Data.Password
  other-modules:
      Paths_password
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite password-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_password
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , password
  default-language: Haskell2010
