cabal-version: 1.12

name:           password-aeson
version:        0.1.0.0
category:       Security
synopsis:       aeson typeclass instances for password package
description:    A library providing typeclass instances for aeson for the types from the password package.
homepage:       https://github.com/cdepillabout/password/tree/master/password-aeson#readme
bug-reports:    https://github.com/cdepillabout/password/issues
author:         Dennis Gosnell, Felix Paulusma
maintainer:     cdep.illabout@gmail.com, felix.paulusma@gmail.com
copyright:      Copyright (c) Dennis Gosnell, 2019; Felix Paulusma, 2020
license:        BSD3
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cdepillabout/password

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.6 && <1.1

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Password.Aeson
  other-modules:
      Paths_password_aeson
  build-depends:
      base          >= 4.9 && < 5
    , aeson         >= 0.2
    , password-types          < 2
    , text
  ghc-options:
      -Wall
  default-language:
      Haskell2010

test-suite doctests
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/doctest
  main-is:
      doctest.hs
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , base-compat
    , doctest
    , password
    , password-aeson
    , QuickCheck
    , quickcheck-instances
    , template-haskell
  default-language:
      Haskell2010

test-suite password-aeson-tasty
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/tasty
  main-is:
      Spec.hs
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , password-aeson
    , password-types
    , aeson
    , quickcheck-instances
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
  default-language:
      Haskell2010
