cabal-version: 1.12

name:           password-http-api-data
version:        0.1.0.0
category:       Security
synopsis:       http-api-data typeclass instances for password package
description:    A library providing typeclass instances for `http-api-data` for the types from the password package.
homepage:       https://github.com/cdepillabout/password/tree/master/password-http-api-data#readme
bug-reports:    https://github.com/cdepillabout/password/issues
author:         Dennis Gosnell, Felix Paulusma
maintainer:     cdep.illabout@gmail.com, felix.paulusma@gmail.com
copyright:      Copyright (c) Dennis Gosnell, 2019; Felix Paulusma, 2020
license:        BSD3
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cdepillabout/password

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.6 && <1.1

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Password.HttpApiData
  other-modules:
      Paths_password_http_api_data
  build-depends:
      base          >= 4.9 && < 5
    , http-api-data
    , password-types          < 2
    , text
  ghc-options:
      -Wall
  default-language:
      Haskell2010

test-suite doctests
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/doctest
  main-is:
      doctest.hs
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , base-compat
    , doctest
    , password
    , password-http-api-data
    , QuickCheck
    , quickcheck-instances
    , template-haskell
  default-language:
      Haskell2010

test-suite password-http-api-data-tasty
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/tasty
  main-is:
      Spec.hs
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , password-http-api-data
    , password-types
    , http-api-data
    , quickcheck-instances
    , tasty
    , tasty-hunit
    , tasty-quickcheck
  default-language:
      Haskell2010
