cabal-version: 1.12

name:           password-instances
version:        3.0.0.0
category:       Data
synopsis:       typeclass instances for password package
description:    A library providing typeclass instances for common libraries for the types from the password package.
homepage:       https://github.com/cdepillabout/password/tree/master/password-instances#readme
bug-reports:    https://github.com/cdepillabout/password/issues
author:         Dennis Gosnell, Felix Paulusma
maintainer:     cdep.illabout@gmail.com, felix.paulusma@gmail.com
copyright:      Copyright (c) Dennis Gosnell, 2019; Felix Paulusma, 2020
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cdepillabout/password

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Password.Instances
  other-modules:
      Paths_password_instances
  build-depends:
      base          >= 4.9 && < 5
    , aeson         >= 0.2
    , http-api-data
    , password-types          < 2
    , persistent    >= 1.2
    , text
  ghc-options:
      -Wall
  default-language:
      Haskell2010
  x-docspec-extra-packages: QuickCheck quickcheck-instances password password-types

test-suite password-instances-tasty
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/tasty
  main-is:
      Spec.hs
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , password-instances
    , password-types
    , aeson
    , http-api-data
    , persistent
    , quickcheck-instances
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
  default-language:
      Haskell2010
