cabal-version: 1.12

name:           password-instances
version:        3.0.1.0
category:       Data
synopsis:       typeclass instances for password package
description:    A library providing typeclass instances for common libraries for the types from the password package.
homepage:       https://github.com/cdepillabout/password/tree/master/password-instances#readme
bug-reports:    https://github.com/cdepillabout/password/issues
author:         Dennis Gosnell, Felix Paulusma
maintainer:     cdep.illabout@gmail.com, felix.paulusma@gmail.com
copyright:      Copyright (c) Dennis Gosnell, 2019; Felix Paulusma, 2020
license:        BSD3
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cdepillabout/password

flag aeson
  description: Enable instances for Aeson
  default: True
  manual: True

flag http-api-data
  description: Enable instances for HTTP API Data
  default: True
  manual: True

flag persistent
  description: Enable instances for Persistent
  default: True
  manual: True

custom-setup
  setup-depends:
      base
    , Cabal

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Password.Instances
  other-modules:
      Paths_password_instances
  build-depends:
      base          >= 4.9 && < 5
  ghc-options:
      -Wall
  default-language:
      Haskell2010
  default-extensions:
      CPP
  if flag(aeson)
    build-depends:
        password-aeson
    cpp-options: -DFLAG_AESON
  if flag(http-api-data)
    build-depends:
        password-http-api-data
    cpp-options: -DFLAG_HTTP_API_DATA
  if flag(persistent)
    build-depends:
        password-persistent
    cpp-options: -DFLAG_PERSISTENT
