cabal-version: 1.12

name:           password-instances
version:        3.0.0.0
category:       Security
synopsis:       typeclass instances for password package
description:    A library providing typeclass instances for common libraries for the types from the password package.
homepage:       https://github.com/cdepillabout/password/tree/master/password-instances#readme
bug-reports:    https://github.com/cdepillabout/password/issues
author:         Dennis Gosnell, Felix Paulusma
maintainer:     cdep.illabout@gmail.com, felix.paulusma@gmail.com
copyright:      Copyright (c) Dennis Gosnell, 2019; Felix Paulusma, 2020
license:        BSD3
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cdepillabout/password

custom-setup
  setup-depends:
      base
    , Cabal

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Password.Instances
  other-modules:
      Paths_password_instances
  build-depends:
      base          >= 4.9 && < 5
    , password-aeson
    , password-http-api-data
    , password-persistent
  ghc-options:
      -Wall
  default-language:
      Haskell2010
