cabal-version: 1.12

name:           password-types
version:        1.0.0.0
category:       Data
synopsis:       Types for handling passwords
description:    A library providing types for working with plain-text and hashed passwords.
homepage:       https://github.com/cdepillabout/password/tree/master/password-types#readme
bug-reports:    https://github.com/cdepillabout/password/issues
author:         Dennis Gosnell, Felix Paulusma
maintainer:     cdep.illabout@gmail.com, felix.paulusma@gmail.com
copyright:      Copyright (c) Dennis Gosnell & Felix Paulusma, 2020
license:        BSD3
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
    ChangeLog.md

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.6 && <1.1

source-repository head
  type: git
  location: https://github.com/cdepillabout/password

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Password.Types
  other-modules:
      Paths_password_types
  build-depends:
      base        >= 4.9 && < 5
    , bytestring            < 1
    , memory                < 0.16
    , text                  < 1.3
  ghc-options:
      -Wall
  default-language:
      Haskell2010

test-suite doctests
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/doctest
  main-is:
      doctest.hs
  ghc-options:
      -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , base-compat
    , doctest
    , password-types
    , QuickCheck
    , quickcheck-instances
    , template-haskell
  default-language:
      Haskell2010

test-suite password-types-tasty
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test/tasty
  main-is:
      Spec.hs
  other-modules:
      Paths_password_types
  ghc-options:
      -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.9 && <5
    , password-types
    , quickcheck-instances
    , tasty
    , tasty-quickcheck
    , text
  default-language:
      Haskell2010
